--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -147,8 +147,6 @@
         app:layout_constraintTop_toBottomOf="@id/btn_register" />
 
     <!-- Google Sign In -->
-
-    <!-- Already have account section -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_google_register"
         style="@style/Widget.Material3.Button.OutlinedButton"
@@ -159,8 +157,7 @@
         app:cornerRadius="28dp"
         app:icon="@drawable/ic_google_24"
         app:iconTint="@null"
-        app:layout_constraintTop_toBottomOf="@id/tv_divider"
-        tools:layout_editor_absoluteX="48dp" />
+        app:layout_constraintTop_toBottomOf="@id/tv_divider" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -185,7 +182,27 @@
             android:focusable="true"
             android:text="Login"
             android:textColor="?attr/colorPrimary"
-            android:textStyle="bold"
-            tools:ignore="TouchTargetSizeCheck" />
+            android:textStyle="bold" />
     </LinearLayout>
+
+    <!-- Progress Overlay -->
+    <FrameLayout
+        android:id="@+id/progress_overlay"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        android:background="#80000000"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ProgressBar
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_gravity="center"
+            android:indeterminateTint="?attr/colorPrimary" />
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
