--- a/app/src/main/res/drawable/ic_help_24.xml
+++ b/app/src/main/res/drawable/ic_help_24.xml
@@ -1,12 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
+    android:viewportHeight="24">
   <path
-      android:fillColor="@android:color/white"
-      android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM12,20c-4.41,0 -8,-3.59 -8,-8s3.59,-8 8,-8 8,3.59 8,8 -3.59,8 -8,8zM11,16h2v2h-2zM12.61,6.04c-2.06,-0.3 -3.88,0.97 -4.43,2.79 -0.18,0.58 0.26,1.17 0.87,1.17h0.2c0.41,0 0.74,-0.29 0.88,-0.67 0.32,-0.89 1.27,-1.5 2.3,-1.28 0.95,0.2 1.65,1.09 1.65,2.06 0,0.79 -0.43,1.49 -1.07,1.85 -0.92,0.53 -1.54,1.42 -1.54,2.46v0.33c0,0.41 0.34,0.75 0.75,0.75h0c0.41,0 0.75,-0.34 0.75,-0.75v-0.33c0,-0.41 0.25,-0.77 0.61,-0.91 1.33,-0.5 2.28,-1.81 2.28,-3.34 0,-2.38 -2.38,-4.08 -4.24,-3.66z"/>
+      android:fillColor="@android:color/black"
+      android:pathData="M12,2C13.1,2 14,2.9 14,4C14,5.1 13.1,6 12,6C10.9,6 10,5.1 10,4C10,2.9 10.9,2 12,2ZM21,9V7L15,7V9C15,11.8 12.8,14 10,14V22H8V14C5.2,14 3,11.8 3,9V7H9V9C9,10.1 9.9,11 11,11H13C14.1,11 15,10.1 15,9ZM16,20C16,18.3 17.3,17 19,17C20.7,17 22,18.3 22,20C22,21.7 20.7,23 19,23C17.3,23 16,21.7 16,20ZM19,21.5C19.8,21.5 20.5,20.8 20.5,20C20.5,19.2 19.8,18.5 19,18.5C18.2,18.5 17.5,19.2 17.5,20C17.5,20.8 18.2,21.5 19,21.5Z"/>
 </vector>
 
