--- a/app/src/main/res/drawable/ic_person_24.xml
+++ b/app/src/main/res/drawable/ic_person_24.xml
@@ -3,9 +3,9 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
+    android:tint="?attr/colorOnSurfaceVariant">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M12,12c2.21,0 4,-1.79 4,-4s-1.79,-4 -4,-4 -4,1.79 -4,4 1.79,4 4,4zM12,14c-2.67,0 -8,1.34 -8,4v2h16v-2c0,-2.66 -5.33,-4 -8,-4z"/>
+      android:pathData="M12,2C13.1,2 14,2.9 14,4C14,5.1 13.1,6 12,6C10.9,6 10,5.1 10,4C10,2.9 10.9,2 12,2ZM21,9V7L15,7V9C15,10.65 13.65,12 12,12C10.35,12 9,10.65 9,9V7L3,7V9C3,11.76 4.46,14.1 6.7,15.3L5.83,21L7.83,21L8.31,17L15.69,17L16.17,21L18.17,21L17.3,15.3C19.54,14.1 21,11.76 21,9Z"/>
 </vector>
 
