--- a/app/src/main/res/layout/fragment_category_listing.xml
+++ b/app/src/main/res/layout/fragment_category_listing.xml
@@ -23,7 +23,7 @@
         android:clipToPadding="false"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/item_listing_card" />
+        tools:listitem="@layout/item_listing" />
 
     <TextView
         android:id="@+id/tv_empty_state"
